fix: set visibility of next question button to default to hidden

--- a/styles/QuizQuestion.module.scss
+++ b/styles/QuizQuestion.module.scss
@@ -30,6 +30,7 @@
 }
 
 .next {
+  visibility: hidden;
   margin-top: 3rem;
 }
 
